--- a/teste_an/src/app/livros/cadastrar/cadastrar.html
+++ b/teste_an/src/app/livros/cadastrar/cadastrar.html
@@ -1,1 +1,7 @@
 <p>compenente de cadastro de livros</p>
+
+{{nome}}
+
+<img src="caminhoImagem" width="300" />
+
+<button (click)="dizerOi()"> Clique Aqui</button>
