--- a/teste_an/src/app/app.html
+++ b/teste_an/src/app/app.html
@@ -338,5 +338,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-teste modulo principal
+<app-root></app-root>
 <router-outlet />
