--- a/teste_an/src/app/produtosmodule/listaprodutocomponent/listaprodutocomponent.html
+++ b/teste_an/src/app/produtosmodule/listaprodutocomponent/listaprodutocomponent.html
@@ -1,3 +1,6 @@
 <ul *ngIf = "mostrarlista">
     <li *ngFor = "let item of lista">{{item.nome}}</li>
 </ul>
+
+
+<app-botaocomponent></app-botaocomponent>
